3. Moved classroom and doctor's room assets into Models folder
4. Deleted Salsa folder
5. Added more stuff in the bedroom.

# 04/15/2016
1. Added animations to scene1
2. Renamed few files.
3. Added colliders to objects in Scene1.
4. Revised Doctor's Room and added colliders
5. Added CardboardReticle growth feature.
6. Added ProcrastinationScript.cs

# 04/18/2016
1. Added iTween.
2. Added flying images during gaming.
3. Added animated Square and Circle button popups for choices.
4. Added animated social media images.
5. Screen darkens when procrastinating.

# 04/19/2016
1. Fixed animated social media images to be relative to user.
2. Changed shadows in Scene1 from Soft to No Shadows.
3. Upgraded LipSync to 1.0 and added language model.
4. Added classroom ambience noise.
5. Added ClassroomScript.cs.

# 04/19/2016
1. Added student character with blend shapes.
2. Added another animation for professor.
3. Added Doctor character and animations.
4. Added background sound for internet surfing scene.
5. Added nurse character for scene3.
6. Added interaction events in classroom scene.
7. Added ExitGame.cs to Scene1.
8. Fixed issue with scene switch to Scene 2 happening before interaction with classmate.
9. Changed Lighting in Scene 1 to Baked.

# 04/21/2016
1. Added roof, door and wall to Scene 3.
2. Changed Lighting in Scene 3 to No Shadows from Soft and Ambient GI to Baked from Relatime.
3. Removed extra audio files from assets.
4. Added lipsync to Doctor character in scene3.
5. Added reunion banner in scene1.
6. Changed Nurse animation.
7. Added reunion banner.
8. Added the character rotation script to make the virtual human always look at the FPS controller.
9. Added images for paper.
10. Changes to ProcrastinationScript.cs for events in Scene2.
11. Added Patient animations in scene2 and scene3
12. Fixed few bugs in Scene 3 and adjusted height to match to the character

# 04/22/2016
1. Added crowd audio and ambient music in Scene 4.
2. Updated Readme.md.