@@ -1,0 +1,12 @@
+fileFormatVersion: 2
+guid: feedbfae43cc2834d8ce9cbddbb356e6
+timeCreated: 1461368952
+licenseType: Free
+MonoImporter:
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
